fixed some sizing and horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,6 @@ body a:hover {
     font-size: 24px;
 }
 
-
 .tablinks.active {
     color: #E10A58;
 }
@@ -312,9 +311,18 @@ body a:hover {
     width: 50%;
 }
 
+.ud-poster3 {
+    width: 100%;
+}
+
 .ux-img {
     width: 100%;
     padding: 10px 200px 0 0;
+}
+
+.interest-header {
+    margin: 0 0 15px 40px;
+    padding: 20px 0 0 0;
 }
 
 .interest-desc {
@@ -388,7 +396,7 @@ body a:hover {
     color: #225EF7;
 }
 
-.prototype-video a{
+.prototype-video a {
     color: #225EF7;
 }
 
@@ -408,7 +416,7 @@ body a:hover {
 }
 
 .skills-section {
-    margin: 60px;
+    padding: 60px;
 }
 
 .skills-section h1 {
@@ -597,8 +605,11 @@ body a:hover {
 }
 
 .empathy-card {
+    margin: auto;
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
+    width: 400px;
     border-radius: 20px;
+    padding: 40px;
 }
 
 .emphasize p {
@@ -629,7 +640,7 @@ body a:hover {
     font-weight: 600;
 }
 
-.key-takeaways p{
+.key-takeaways p {
     font-size: 18px;
     font-weight: 400;
 }
@@ -648,4 +659,9 @@ body a:hover {
     border-radius: 0 80px 80px 0;
     word-wrap: break-word;
     padding: 30px 0px 30px 100px;
+}
+
+.persona-container {
+    overflow: auto;
+    white-space: nowrap;
 }
